[gd_scene load_steps=10 format=3 uid="uid://ir8qge0ul3d6"]

[ext_resource type="Script" uid="uid://cswo5es3jamcd" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://b6culji4mri" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://x52rj0ldlp3s" path="res://scenes/enemy.tscn" id="3_lbhrr"]
[ext_resource type="PackedScene" uid="uid://c3yh310hr47y3" path="res://scenes/parallax_2d.tscn" id="4_lbhrr"]

[sub_resource type="Theme" id="Theme_lbhrr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iywne"]
bg_color = Color(0.64705884, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbhrr"]
bg_color = Color(0, 0.5686275, 0.22745098, 1)

[sub_resource type="Theme" id="Theme_iywne"]
ProgressBar/constants/outline_size = 1
ProgressBar/styles/background = SubResource("StyleBoxFlat_iywne")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_lbhrr")

[sub_resource type="Environment" id="Environment_lbhrr"]

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")
enemy_scenes = Array[PackedScene]([ExtResource("3_lbhrr")])

[node name="Parallax2D" parent="." instance=ExtResource("4_lbhrr")]

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(160, 129)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(159, 162)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="ExplosionContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 359.0
theme = SubResource("Theme_lbhrr")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 109.0
offset_bottom = 9.0
scale = Vector2(0.5, 0.5)
theme = SubResource("Theme_iywne")
value = 80.0
show_percentage = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lbhrr")

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
